commit overflow fix

--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,7 @@ html, body{
   min-height: 100%;
   display: flex;
   flex-direction: column;
+  overflow-x: hidden; 
 }
 
 body{
